Fix flickers

--- a/code/ui/generalhud/chat/ChatBox.scss
+++ b/code/ui/generalhud/chat/ChatBox.scss
@@ -4,6 +4,7 @@ ChatBox {
     left: 25px;
     flex-direction: column;
     width: 400px;
+    z-index: 10;
 
     .input-panel {
         flex-direction: row;
